--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,55 +1,20 @@
 resource_types:
-- name: artifactory
+- name: curl
   type: docker-image
   source:
-    repository: pivotalservices/artifactory-resource
+    repository: pivotalservices/concourse-curl-resource
 
 resources:
-- name: file-repository
-  type: artifactory
+- name: single-file
+  type: curl
   check_every: 1m
   source:
-    endpoint: http://ARTIFACTORY-HOST-NAME-GOES-HERE:8081/artifactory
-    repository: "/repository-name/sub-folder"
-    regex: "myapp-(?<version>.*).txt"
-    username: YOUR-ARTIFACTORY-USERNAME
-    password: YOUR-ARTIFACTORY-PASSWORD
-
+    url: https://s3-us-west-1.amazonaws.com/lsilva-bpws/PCF_usage/pcf-sandbox-usage-from-2016-09-01-to-2016-09-30_1475771124.json
+    filename: pcf-sandbox.json
 jobs:
-- name: build-and-save-to-artifactory
-  serial: true
-  public: true
+- name: run-and-get-file
   plan:
-  - task: build-file
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: ubuntu
-          tag: "latest"
-      outputs:
-      - name: build
-      run:
-        path: sh
-        args:
-        - -exc
-        - |
-          export DATESTRING=$(date +"%Y%m%d")
-          echo "This is my file" > ./build/myapp-$(date +"%Y%m%d%H%S").txt
-          find .
-  - put: file-repository
-    params: { file: ./build/myapp-*.txt }
-
-- name: trigger-when-new-file-is-added-to-artifactory
-  serial: true
-  public: true
-  plan:
-  - get: file-repository
-    trigger: true
-    passed:
-      - build-and-save-to-artifactory
-  - task: use-new-file
+  - task: run-and-get-file
     config:
       platform: linux
       image_resource:
@@ -58,12 +23,10 @@ jobs:
           repository: ubuntu
           tag: "latest"
       inputs:
-      - name: file-repository
+      - single-file
       run:
         path: sh
         args:
         - -exc
         - |
-          export DATESTRING=$(date +"%Y%m%d")
-          ls -la file-repository
-          cat ./file-repository/myapp*.txt
+          find .
