--- a/pipeline.yml
+++ b/pipeline.yml
@@ -3,6 +3,7 @@ resource_types:
   type: docker-image
   source:
     repository: pivotalservices/concourse-curl-resource
+    tag: latest
 
 resources:
 - name: single-file
