--- a/pipeline.yml
+++ b/pipeline.yml
@@ -6,16 +6,22 @@ resource_types:
     tag: latest
 
 resources:
-- name: my-file
+- name: my-file-with-last-modified-info
+  type: file-url
+  source:
+    url: https://s3-us-west-1.amazonaws.com/lsilva-bpws/PCF_usage/pcf-sandbox-usage-from-2016-09-01-to-2016-09-30_1475771124.json
+    filename: pcf-sandbox-usage.json
+- name: my-file-without-last-modified-info
   type: file-url
   source:
     url: https://raw.githubusercontent.com/pivotalservices/concourse-curl-resource/master/test/data/pivotal-1.0.0.txt
     filename: pivotal-1.0.0.txt
 
 jobs:
-- name: run-and-get-file
+- name: run-and-get-files
   plan:
-  - get: my-file
+  - get: my-file-with-last-modified-info
+  - get: my-file-without-last-modified-info
   - task: run-and-get-file
     config:
       platform: linux
@@ -25,7 +31,8 @@ jobs:
           repository: ubuntu
           tag: "latest"
       inputs:
-      - name: my-file
+      - name: my-file-with-last-modified-info
+      - name: my-file-without-last-modified-info
       run:
         path: sh
         args:
